# Dynamic-RTS

./: README.md
src/: CMakeLists.txt  DTAlgorithm  DTAlgorithm.cpp  DTAlgorithm.h  DistributedTracking.cpp  DistributedTracking.h  EndpointTree.cpp  EndpointTree.h  Query.cpp  Query.h  StreamElement.h  TreeNode.cpp  TreeNode.h  main  main.cpp
src/DTAlgorithm.dSYM/Contents/: Info.plist
src/DTAlgorithm.dSYM/Contents/Resources/DWARF/: DTAlgorithm
src/main.dSYM/Contents/Resources/DWARF/: main
src/naive/: naive_algorithm.cpp  naive_algorithm.h
src/tests/: DTAlgorithmTest.cpp  DTAlgorithmTest.h  test_DT_algorithm.cpp  test_canoncial_node_set.cpp  test_distributed_tracking.cpp  test_element_processing.cpp  test_endpoint_tree.cpp  test_tree_node.cpp
thesis/: thesis.bib  thesis.cls  thesis.tex
thesis/chapters/: 01-introduction.tex  02-preliminary.tex  03-RTS.tex  04-DRTS.tex
thesis/preamble/: abstract.tex  acknowledgements.tex  declaration.tex
